添加商城和订单页面

--- a/app.json
+++ b/app.json
@@ -1,6 +1,8 @@
 {
     "pages": [
+        "pages/order/order",
         "pages/mall/mall",
+        "pages/product/product",
         "pages/sponsor/sponsor",
         "pages/index/index",
         "pages/logs/logs"
