--- a/project.config.json
+++ b/project.config.json
@@ -15,7 +15,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.6.6",
 	"appid": "wxc83a202877007ac3",
-	"projectname": "demo",
+	"projectname": "group",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
@@ -31,13 +31,31 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 1,
+			"list": [
+				{
+					"id": -1,
+					"name": "产品库",
+					"pathName": "pages/product/product",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "社群商城",
+					"pathName": "pages/mall/mall",
+					"scene": null
+				}
+			]
 		}
 	}
 }
