团长页面布局完成

--- a/app.json
+++ b/app.json
@@ -5,7 +5,8 @@
         "pages/product/product",
         "pages/sponsor/sponsor",
         "pages/index/index",
-        "pages/logs/logs"
+        "pages/logs/logs",
+        "pages/home/home"
     ],
     "window": {
         "backgroundTextStyle": "light",
