--- a/project.config.json
+++ b/project.config.json
@@ -40,7 +40,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 3,
+			"current": 4,
 			"list": [
 				{
 					"id": -1,
@@ -67,6 +67,14 @@
 					"id": -1,
 					"name": "社群商城首页",
 					"pathName": "pages/home/home",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "商城用户",
+					"pathName": "pages/mallUser/mallUser",
+					"query": "",
 					"scene": null
 				}
 			]
