--- a/app.json
+++ b/app.json
@@ -7,7 +7,8 @@
         "pages/product/product",
         "pages/home/home",
         "pages/mallUser/mallUser",
-        "pages/report/report"
+        "pages/report/report",
+        "pages/shopping/shopping"
     ],
     "tabBar": {
         "color": "#333",
