--- a/project.config.json
+++ b/project.config.json
@@ -41,7 +41,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 4,
+			"current": 5,
 			"list": [
 				{
 					"id": -1,
@@ -76,6 +76,12 @@
 					"name": "商城用户",
 					"pathName": "pages/mallUser/mallUser",
 					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "购物车列表",
+					"pathName": "pages/shopping/shopping",
 					"scene": null
 				}
 			]
