--- a/project.config.json
+++ b/project.config.json
@@ -41,7 +41,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 8,
+			"current": 10,
 			"list": [
 				{
 					"id": -1,
@@ -103,6 +103,20 @@
 					"id": -1,
 					"name": "优惠券",
 					"pathName": "pages/coupon/coupon",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "个人中心",
+					"pathName": "pages/user/user",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "团长",
+					"pathName": "pages/sponsor/sponsor",
 					"scene": null
 				}
 			]
