--- a/project.config.json
+++ b/project.config.json
@@ -41,7 +41,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 10,
+			"current": 12,
 			"list": [
 				{
 					"id": -1,
@@ -117,6 +117,20 @@
 					"id": -1,
 					"name": "团长",
 					"pathName": "pages/sponsor/sponsor",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "商品详情",
+					"pathName": "pages/detail/detail",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "商品列表",
+					"pathName": "pages/goodsList/goodsList",
 					"scene": null
 				}
 			]
