--- a/project.config.json
+++ b/project.config.json
@@ -41,7 +41,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 12,
+			"current": 10,
 			"list": [
 				{
 					"id": -1,
@@ -114,9 +114,9 @@
 					"scene": null
 				},
 				{
-					"id": -1,
+					"id": 10,
 					"name": "团长",
-					"pathName": "pages/sponsor/sponsor",
+					"pathName": "manager/sponsor/sponsor",
 					"query": "",
 					"scene": null
 				},
@@ -131,6 +131,14 @@
 					"id": -1,
 					"name": "商品列表",
 					"pathName": "pages/goodsList/goodsList",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "我的报表",
+					"pathName": "pages/report/report",
+					"query": "",
 					"scene": null
 				}
 			]
