--- a/project.config.json
+++ b/project.config.json
@@ -41,7 +41,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 10,
+			"current": 14,
 			"list": [
 				{
 					"id": -1,
@@ -65,9 +65,9 @@
 					"scene": null
 				},
 				{
-					"id": -1,
+					"id": 3,
 					"name": "社群商城首页",
-					"pathName": "pages/home/home",
+					"pathName": "pages/subpage/home/home",
 					"query": "",
 					"scene": null
 				},
@@ -138,6 +138,13 @@
 					"id": -1,
 					"name": "我的报表",
 					"pathName": "pages/report/report",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "首页",
+					"pathName": "pages/menu/index/index",
 					"query": "",
 					"scene": null
 				}
